# cloud-run-long-batch

./: Dockerfile  README.md  main.py  pipeline.py  pyproject.toml
